[package]
name = "unsafe-track"
version = "0.1.0"
edition = "2021"

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'

[dependencies]
# TODO: patch/vendor geiger to use syn 2.0
geiger = "0.4.12"
cargo-geiger-serde = "0.2.5"
syn = "1.0.109"

moka = { version = "0.12.7", features = ["sync"] }

plotters = { version = "0.3.6", default-features = false, features = ["ab_glyph", "datetime", "svg_backend", "line_series"] }
chrono = "0.4.38"

tracing = "0.1.40"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.16.0"
tracing-opentelemetry = "0.24.0"
tower-otel = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

prodash = "28.0.0"
gix-transport = { version = "0.42.1", features = ["http-client-reqwest-rust-tls"] }
gix-protocol = { version = "0.45.1", features = ["blocking-client"] }
gix-pack = { version = "0.51.0", features = ["pack-cache-lru-dynamic"] }
gix-hash = "0.14.2"
gix-features = { version = "0.38.2", features = ["zlib"] }
gix-object = "0.42.2"
gix-date = "0.8.7"

thiserror = "1.0.61"
anyhow = "1.0.86"

tempfile = "3.10.1"

rayon = "1.10.0"
indicatif = "0.17.8"

regex = "1.10.5"

serde = "1.0.203"

clap = { version = "4.5.8", features = ["derive"] }

tokio = "1.38.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
mime = "0.3.17"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["catch-panic", "trace"] }

mimalloc = "0.1.43"
